[tool.poetry]
name = "py-webframeworks"
version = "0.1.0"
description = ""
authors = ["Szymon Mikitiuk <szymon.mikitiuk@merapar.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.39"
Jinja2 = "^3.1.2"
Flask = "^2.1.3"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
